--- a/KlipperScreen.config
+++ b/KlipperScreen.config
@@ -7,25 +7,25 @@
       {
         "name": "Home All",
         "icon": "home",
-        "method": "post_printer_gcode",
+        "method": "post_printer_gcode_script",
         "params": {"script": "G28"}
       },
       {
         "name": "Home X",
         "icon": "home-x",
-        "method": "post_printer_gcode",
+        "method": "post_printer_gcode_script",
         "params": {"script": "G28 X"}
       },
       {
         "name": "Home Y",
         "icon": "home-y",
-        "method": "post_printer_gcode",
+        "method": "post_printer_gcode_script",
         "params": {"script": "G28 Y"}
       },
       {
         "name": "Home Z",
         "icon": "home-z",
-        "method": "post_printer_gcode",
+        "method": "post_printer_gcode_script",
         "params": {"script": "G28 Z"}
       }
     ]
@@ -56,9 +56,14 @@
 				"panel": "temperature"
 			},
 			{
-				"name": "Control",
-				"icon": "control",
-				"panel": "control"
+				"name": "Disable Motors",
+				"icon": "motor-off",
+        "method": "post_printer_gcode_script",
+        "params": {"script": "M18"},
+        "command": {
+          "method": "post_printer_gcode_script",
+          "params": {"script": "M18"}
+        }
 			},
 			{
 				"name": "ToolChanger",
@@ -84,7 +89,7 @@
 			{
 				"name": "ZOffsets",
 				"icon": "z-offset-increase",
-				"panel": "nozzle-calibration"
+				"panel": "zcalibrate"
 			},
 			{
 				"name": "Network",
