Create extrude panel and some other fixes

--- a/KlipperScreen.config
+++ b/KlipperScreen.config
@@ -44,7 +44,7 @@
   			{
   				"name": "Extrude",
   				"icon": "filament",
-  				"panel": "extrude_multitool"
+  				"panel": "extrude"
   			},
   			{
   				"name": "Fan",
@@ -65,11 +65,6 @@
             "method": "post_printer_gcode_script",
             "params": {"script": "M18"}
           }
-  			},
-  			{
-  				"name": "ToolChanger",
-  				"icon": "toolchanger",
-  				"panel": "toolchanger"
   			}
   		]
     },
@@ -134,7 +129,7 @@
     {
       "name": "Extrude",
       "icon": "filament",
-      "panel": "extrude_multitool"
+      "panel": "extrude"
     }
   ]
 
