--- a/scripts/KlipperScreen.service
+++ b/scripts/KlipperScreen.service
@@ -9,7 +9,7 @@ Restart=always
 RestartSec=1
 User=pi
 WorkingDirectory=KS_DIR
-ExecStart=/usr/bin/xinit /usr/bin/python KS_DIR/screen.py
+ExecStart=/usr/bin/xinit KS_ENV/bin/python KS_DIR/screen.py
 
 [Install]
 WantedBy=multi-user.target
